<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mukluk="http://schemas.android.com/apk/res/com.crap.mukluk"
    >
    <PreferenceCategory
        android:title="@string/category_appearance"
        >
        <PreferenceScreen
            android:title="@string/background_title"
            >
	        <com.crap.mukluk.BackgroundColorPreference
	            android:title="@string/background_title"
	            android:key="background_color"
	            mukluk:foregroundColorKey="foreground_color"
	            mukluk:textSizeKey="text_size_int"
	            />
        </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/foreground_title"
            >
            <com.crap.mukluk.ForegroundColorPreference
                android:title="@string/foreground_title"
                android:key="foreground_color"
                mukluk:backgroundColorKey="background_color"
                mukluk:textSizeKey="text_size_int"
                />
        </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/echo_color_title"
            >
            <com.crap.mukluk.EchoColorPreference
                android:title="@string/foreground_title"
                android:key="echo_color"
                mukluk:backgroundColorKey="background_color"
                mukluk:textSizeKey="text_size_int"
                />
        </PreferenceScreen>  
        <PreferenceScreen
            android:title="@string/text_size_title"
            >
            <com.crap.mukluk.TextSizePreference
                android:title="@string/text_size_title"
                android:key="text_size_int"
                mukluk:backgroundColorKey="background_color"
                mukluk:foregroundColorKey="foreground_color"
                />    
        </PreferenceScreen>
         <EditTextPreference
            android:title="@string/screen_buffer_size_title"
            android:summary="@string/screen_buffer_size_summary"
            android:key="screen_buffer_size"
            android:dialogTitle="@string/screen_buffer_dialog_title"
            android:dialogMessage="@string/screen_buffer_dialog_message"
            android:defaultValue="100"
            android:numeric="integer"
            android:maxLength="3"
            android:positiveButtonText="@string/button_save"
            android:negativeButtonText="@string/button_cancel"
            />
        <CheckBoxPreference
            android:title="@string/full_screen_title"
            android:key="full_screen"
            android:defaultValue="false"
            android:summary="@string/full_screen_summary"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/category_output"
        >
         <CheckBoxPreference
            android:title="@string/vibrate_on_bell_title"
            android:key="vibrate_on_bell"
            android:defaultValue="false"
            android:summary="@string/vibrate_on_bell_summary"
            />  
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/category_command_options"
        >
        <CheckBoxPreference
            android:title="@string/echo_commands_title"
            android:key="echo_commands"
            android:defaultValue="false"
            android:summary="@string/echo_commands_summary"
            />     
        <EditTextPreference
            android:title="@string/command_buffer_size_title"
            android:summary="@string/command_buffer_size_summary"
            android:key="command_buffer_size"
            android:dialogTitle="@string/command_buffer_dialog_title"
            android:dialogMessage="@string/command_buffer_dialog_message"
            android:defaultValue="20"
            android:numeric="integer"
            android:maxLength="3"
            android:positiveButtonText="@string/button_save"
            android:negativeButtonText="@string/button_cancel"
            />
        <EditTextPreference
            android:title="@string/url_buffer_size_title"
            android:summary="@string/url_buffer_size_summary"
            android:key="url_buffer_size"
            android:dialogTitle="@string/url_buffer_dialog_title"
            android:dialogMessage="@string/url_buffer_dialog_message"
            android:defaultValue="20"
            android:numeric="integer"
            android:maxLength="2"
            android:positiveButtonText="@string/button_save"
            android:negativeButtonText="@string/button_cancel"
            />
        <CheckBoxPreference
            android:title="@string/show_autosay_spinner_title"
            android:summary="@string/show_autosay_spinner_summary"
            android:key="show_autosay_spinner"
            android:defaultValue="false"
            />
        <CheckBoxPreference
            android:title="@string/show_enter_button_title"
            android:summary="@string/show_enter_button_summary"
            android:key="show_enter_button"
            android:defaultValue="false"
            />
        <CheckBoxPreference
            android:title="@string/disable_history_navigation_title"
            android:key="disable_history_navigation"
            android:defaultValue="false"
            android:summary="@string/disable_history_navigation_summary"
            />
        <CheckBoxPreference
            android:title="@string/verify_history_navigation_title"
            android:key="verify_history_navigation"
            android:defaultValue="true"
            android:summary="@string/verify_history_navigation_summary"
            />    
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/category_device"
        >
        <CheckBoxPreference
            android:title="@string/keep_screen_awake_title"
            android:key="keep_screen_awake"
            android:defaultValue="false"
            android:summary="@string/keep_screen_awake_summary"
            />  
        <CheckBoxPreference
            android:title="@string/keep_wifi_awake_title"
            android:key="keep_wifi_awake"
            android:defaultValue="false"
            android:summary="@string/keep_wifi_awake_summary"
            />    
    </PreferenceCategory>
</PreferenceScreen>
