<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item 
        android:id="@+id/menu_item_new_world"
        android:title="@string/menu_add_world"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="always"
        />
    <item
        android:id="@+id/menu_item_import_worlds"
        android:title="@string/menu_import_worlds"
        android:showAsAction="never"
        />
    <item
        android:id="@+id/menu_item_export_worlds"
        android:title="@string/menu_export_worlds"
        android:showAsAction="never"
        />
    <item
        android:id="@+id/menu_item_global_settings"
        android:title="@string/menu_global_settings"
        android:showAsAction="never"
        />
    <item
        android:id="@+id/menu_item_about"
        android:title="@string/menu_about"
        android:showAsAction="never"
        />
</menu>