<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/black"
    >
	<TextView
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:paddingLeft="6dip" 
		android:paddingTop="3dip" 
		android:paddingBottom="3dip" 
		android:textColor="@color/menu_subsection_header_text"
		android:background="@color/menu_subsection_header_background"
		android:text="@string/section_installed_version" 
		/>
	<TextView
	    android:id="@+id/text_version"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:paddingLeft="12dip" 
		android:paddingTop="3dip" 
		android:paddingBottom="3dip"
	/>
    <TextView
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:paddingLeft="6dip" 
        android:paddingTop="3dip" 
        android:paddingBottom="3dip" 
        android:textColor="@color/menu_subsection_header_text"
        android:background="@color/menu_subsection_header_background"
        android:text="@string/section_author" 
        />
    <TextView
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:paddingLeft="12dip" 
		android:paddingTop="3dip" 
		android:paddingBottom="3dip" 
		android:text="@string/label_author" 
		/>
    <TextView
        android:autoLink="web"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:paddingLeft="12dip" 
        android:paddingTop="3dip" 
        android:paddingBottom="3dip"
        android:color="#000000"
        android:text="@string/label_facebook_link"
        />
    <TextView
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:paddingLeft="6dip" 
        android:paddingTop="3dip" 
        android:paddingBottom="3dip" 
        android:textColor="@color/menu_subsection_header_text"
        android:background="@color/menu_subsection_header_background"
        android:text="@string/section_legal" 
        />
    <TextView
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:paddingLeft="12dip" 
        android:paddingTop="3dip" 
        android:paddingBottom="3dip" 
        android:text="@string/label_jackson" 
        />
    <TextView
        android:autoLink="web"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:paddingLeft="12dip" 
        android:paddingTop="3dip" 
        android:paddingBottom="3dip" 
        android:color="#000000"
        android:text="@string/label_jackson_link" 
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="12dip"
        android:paddingTop="3dip"
        android:paddingBottom="3dip"
        android:text="@string/label_icons8"
        />
    <TextView
        android:autoLink="web"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="12dip"
        android:paddingTop="3dip"
        android:paddingBottom="3dip"
        android:color="#000000"
        android:text="@string/label_icons8_link"
        />
</LinearLayout>
