<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
    android:background="@color/black"
    >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="90"
        >
        <LinearLayout
		    xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:orientation="vertical"
		    >
		    <!-- Server -->
		    <TextView
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:paddingLeft="3dip"
		      android:background="@color/menu_subsection_header_background"
		      android:textColor="@color/menu_subsection_header_text"
		      android:text="@string/category_server"
		      android:layout_marginBottom="5dp"
		      />
		    <TextView
		        android:layout_width="fill_parent" 
		        android:layout_height="wrap_content" 
		        android:paddingLeft="3dip" 
		        android:paddingTop="3dip" 
		        android:paddingBottom="3dip" 
		        android:text="@string/label_name" 
		        />
		    <EditText
		        android:id="@+id/text_world_name"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:paddingTop="3dip" 
		        android:paddingBottom="3dip"
		        android:layout_marginRight="8dip"
		        android:inputType="textCapWords"
		        android:hint="@string/hint_name"
		        />
		    <TextView
		        android:layout_width="fill_parent" 
		        android:layout_height="wrap_content" 
		        android:paddingLeft="3dip" 
		        android:paddingTop="3dip" 
		        android:paddingBottom="3dip" 
		        android:text="@string/label_host" 
		        />
		    <EditText
		        android:id="@+id/text_world_address"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:paddingTop="3dip" 
		        android:paddingBottom="3dip"
                android:layout_marginRight="8dip" 
		        android:inputType="textUri"
		        android:hint="@string/hint_host"
		        />
		    <TextView
		        android:layout_width="fill_parent" 
		        android:layout_height="wrap_content" 
		        android:paddingLeft="3dip" 
		        android:paddingTop="3dip" 
		        android:paddingBottom="3dip" 
		        android:text="@string/label_port" 
		        />
		     <EditText
		        android:id="@+id/text_world_port"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:maxLength="5"
		        android:max="65535"
		        android:paddingTop="3dip" 
		        android:paddingBottom="3dip"
		        android:inputType="number"
		        android:hint="@string/hint_port"
		        />
		     <TextView
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:paddingLeft="3dip" 
                android:paddingTop="3dip" 
                android:paddingBottom="3dip" 
                android:text="@string/label_encoding" 
                />
            <Spinner
                android:id="@+id/spinner_encoding"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="3dip" 
                android:paddingBottom="3dip"
                android:layout_marginRight="8dip" 
                />    
		    <!-- Connection Options -->
		    <TextView
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:paddingLeft="3dip"
              android:background="@color/menu_subsection_header_background"
              android:textColor="@color/menu_subsection_header_text"
              android:text="@string/category_connection_options"
              android:layout_marginBottom="5dp"
              android:layout_marginTop="5dp"
              />
            <TextView
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:paddingLeft="3dip" 
                android:paddingTop="3dip" 
                android:paddingBottom="3dip" 
                android:text="@string/label_post_login_command" 
                />
             <EditText
                android:id="@+id/text_post_login_command"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="3dip" 
                android:paddingBottom="3dip"
                android:layout_marginRight="8dip" 
                android:inputType="textPassword"
                android:hint="@string/hint_post_login_command"
                />
            <!--  Appearance Options -->
            <TextView
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:paddingLeft="3dip"
              android:background="@color/menu_subsection_header_background"
              android:textColor="@color/menu_subsection_header_text"
              android:text="@string/category_appearance"
              android:layout_marginBottom="5dp"
              />
            <CheckBox
                android:id="@+id/checkbox_ansi_color"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_ansi_color"
                android:checked="false"
                />
		    <!--  Miscellaneous Options -->
		    <TextView
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:paddingLeft="3dip"
              android:background="@color/menu_subsection_header_background"
              android:textColor="@color/menu_subsection_header_text"
              android:text="@string/category_misc"
              android:layout_marginBottom="5dp"
              android:layout_marginTop="5dp"
              />
            <CheckBox
                android:id="@+id/checkbox_logging"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_logging"
                android:checked="false"
                />
        </LinearLayout>
     </ScrollView>
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:paddingTop="4dip"
        android:paddingLeft="8dip"
        android:paddingRight="8dip"
        >
	     <Button
	        android:id="@+id/button_save_editing"
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:layout_weight="50"
	        android:enabled="false"
	        android:text="@string/button_save"
	        />
	     <Button
	        android:id="@+id/button_cancel_editing"
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:layout_weight="50"
	        android:text="@string/button_cancel"
	        />
     </LinearLayout>
</LinearLayout>
