<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:padding="20dp"
  android:background="@color/black"
  >
  <TextView
    android:id="@+id/sample_text"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:padding="10dp"
    android:typeface="monospace"
    android:textColor="@color/white"
    android:background="@color/android_green"
    android:text="@string/color_sample_text"
    />
	<TableLayout
	   android:orientation="horizontal"
	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:layout_gravity="center_horizontal"
	   android:layout_marginTop="20dp"
	   >
	   <TableRow
            android:layout_marginBottom="10dp"
            >
            <TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:layout_weight="10"
				android:text="@string/text_size_bar_label"
                />
            <SeekBar
			    android:id="@+id/text_size_bar"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical"
			    android:layout_weight="90"
			    android:max="20"
                />
		</TableRow>
	    <TableRow
           android:gravity="right"
           >
            <Button
                android:id="@+id/button_default_text_size"
                android:layout_width="wrap_content"
                android:text="@string/button_default"
                />
        </TableRow>
    </TableLayout>
</LinearLayout>
